# maang-stocks

./: .gitignore  pyproject.toml  requirements.txt  tasks.py  vercel.json
backend/src/: main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
